--- a/steel-rumors/steelrumors/templates/links/link_list.html
+++ b/steel-rumors/steelrumors/templates/links/link_list.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+	{% extends "base.html" %}
 {% block content %}
 <ol>
 {% for link in object_list %}
   <li> [{{ link.votes }}]
-    <a href="{{ link.url }}">
+    {#<a href="{{ link.url }}">#}
+    <a href="{% url 'link_detail' pk=link.pk %}">    	
       <b>{{ link.title }}</b>
     </a>
   </li>
