--- a/steel-rumors/steelrumors/templates/links/link_list.html
+++ b/steel-rumors/steelrumors/templates/links/link_list.html
@@ -1,4 +1,5 @@
-	{% extends "base.html" %}
+{% extends "base.html" %}
+{% load comments %}
 {% block content %}
 <ol>
 {% for link in object_list %}
@@ -6,6 +7,8 @@
     {#<a href="{{ link.url }}">#}
     <a href="{% url 'link_detail' pk=link.pk %}">    	
       <b>{{ link.title }}</b>
+          {% get_comment_count for link as comment_count %}
+          {{ comment_count }} comment{{ comment_count|pluralize }}      
     </a>
   </li>
 {% endfor %}
