--- a/steel-rumors/steelrumors/templates/links/link_list.html
+++ b/steel-rumors/steelrumors/templates/links/link_list.html
@@ -13,4 +13,9 @@
   </li>
 {% endfor %}
 </ol>
+
+<blockquote style="background-color: #ddd; padding: 4px; border-radius: 10px; margin: 10px 0; color: #666; font-size: smaller; text-shadow: rgba(255,255,255,0.8) 1px 1px 0;">
+{{ randomquip.comment|truncatechars:140 }}
+</blockquote>
+
 {% endblock %}
